made a styles folder to entail all the stylings of different pages for the project

--- a/my-demo/src/styles/NavBar.css
+++ b/my-demo/src/styles/NavBar.css
@@ -20,9 +20,9 @@
   color: #130849;
   text-decoration: none;
   margin: 20px;
-  font-size: 1rem;
+  font-size: 20px;
   padding: 10px 28px;
-  font-weight: 700;
+  font-weight: 800;
   transition: all .35s ease;
 }
 
